2012-09-10  Thomas reinke <reinke@securityspace.com>

	* src/comm.c (send_plug_info): Fixed SIGSEGV coredump that would
	occur if no family specified in a nasl script (would core dump
	if client connected and requested complete nasl test list)

2012-09-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp_11.c (ntp_1x_send_dependencies): Use str2arglist
	directly instead of plug_get_deps.

	* src/pluginscheduler.c (hash_add, plugins_scheduler_init):
	Use str2arglist directly instead of plug_get_*.

2012-07-19  Michael Meyer <michael.meyer@greenbone.net>

	* src/openvassd.c:
	store.h was deleted in r13728. So don't include it.

2012-07-19  Matthew Mundell <matthew.mundell@greenbone.net>

	Add new OTP version 1.1 which is like 1.0 but sends less info to the
	client initially.  Patch by Jan-Oliver Wagner.

	* src/comm.c (comm_init): Add OTP/1.1 case.

	* src/openvassd.c (scanner_thread): Skip sending some of the init info for
	OTP > 1.0.

2012-07-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (deny_severity, allow_severity): Removed. Global
	vars are never used.

2012-07-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removed built-in logfile rotation. It is not a good idea to try
	to circumvent system enviroment technology for logrotate.

	* src/log.c (MAX_LOG_SIZE_MEGS, rotate_log_file): Removed.
	(log_init): Removed call of rotate_log_file).

2012-07-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (comm_send_preferences): Removed deprectated prefs sind 3.0.

2012-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c, src/oval_plugins.c: Replace calls
	of store_load_plugin by subsequent calls of nvticache_get
	and plug_create_from_nvti_and_prefs.

2012-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Use nvticache API instead of store_* API in a first step.
	Now it is mandatory that a cache directory really exists.
